# jargo

./: .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  dist-workspace.toml  release-please-config.json  test-file.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-title.yml
docs/: PRD.md
jargo/: Cargo.toml
jargo-bsp/: Cargo.toml
jargo-bsp/src/: main.rs
jargo-core/: Cargo.toml
jargo-core/src/: cache.rs  compiler.rs  context.rs  gradle_module.rs  jar.rs  lib.rs  lockfile.rs  output.rs  pom.rs  resolver.rs  shell.rs
jargo/src/: cli.rs  main.rs
jargo/src/commands/: build.rs  clean.rs  init.rs  new.rs  run.rs
jargo/tests/: integration_test.rs
src/: cache.rs  cli.rs  compiler.rs  errors.rs  gradle_module.rs  lockfile.rs  main.rs  manifest.rs  output.rs  pom.rs  resolver.rs  staging.rs
src/commands/: build.rs  clean.rs  init.rs  mod.rs  new.rs  run.rs
tests/: integration_test.rs
