[package]
name = "jargo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ljredmond9/jargo"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
zip = "2.2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
